--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -954,7 +954,7 @@ pre {
     margin-top: 0;
     margin-bottom: 1rem;
     font-size: 90%;
-    color: #363a42
+    color: #363a42;
 }
 
 pre code {
