--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -15,6 +15,12 @@
     max-height: auto;
 }
 
+@media (min-width: 1200px) {
+    .container {
+        width: 1190px;
+    }
+}
+
 @media (min-width: 768px) {
     #header .header-nav {
         max-height: 100%;
@@ -23,6 +29,7 @@
     .header-nav .container .row {
         display: flex;
         flex-wrap: wrap;
+        padding: 0 15px;
     }
     .header-nav .container .row .navigation-header {
         display: flex;
@@ -37,10 +44,47 @@
     .header-nav .container .row .navigation-header div:nth-child(2) #search_widget {
         float: right;
     }
+    .header-nav .container .row .main-menu {
+        width: 100%;
+    }
+    .header-nav .container .row .main-menu ul {
+        display: flex;
+        justify-content: space-between;
+    }
+    .header-nav .container .row .main-menu ul li:not(:last-child) {
+        margin-right: 15px;
+    }
+    .header-nav .container .row .main-menu ul li a {
+        text-transform: none;
+        letter-spacing: 1px;
+        word-spacing: -2px;
+    }
     /*products*/
+    #main #content .featured-products {
+        margin-top: 60px;
+    }
     #main #content section .products {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+    }
+    #main #content section .products article .thumbnail-container,
+    #main #content section .products article .thumbnail-container .highlighted-informations {
+        box-shadow: none;
+    }
+    #main #content section .products article .product-description h3 {
+        text-align: left;
+        position: relative;
+    }
+    #main #content section .products article .product-description a {
+        text-align: left;
+        padding-left: 10px;
+        color: #000;
+        font-size: 20px;
+        border-left: 1px solid #000;
+    }
+    #main #content section .products article .product-description .product-price-and-shipping {
+        text-align: left;
+        font-size: 13px;
     }
 }
