--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -70,3 +70,17 @@
 .container #main #content .featured-products .products .product-miniature .thumbnail-container .highlighted-informations {
   box-shadow: none;
 }
+#footer .blockreassurance {
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+}
+#footer .blockreassurance .block-icon,
+#footer .blockreassurance .block-icon img {
+  height: 30px;
+}
+#footer .blockreassurance .block-title {
+  margin-top: 10px;
+  font-style: italic;
+  font-family: "AlegreyaSans";
+  font-size: 12px;
+}
