--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -9571,8 +9571,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .featured-products .product-title a,
 .product-accessories .product-title a,
 .product-miniature .product-title a {
-    color: #7a7a7a;
-    font-size: .875rem;
+    font-size: 24px;
     text-decoration: none;
     text-align: center;
     font-weight: 400
@@ -9587,7 +9586,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     height: 318px;
     width: 250px;
     background: #fff;
-    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .2)
 }
 
 #products .thumbnail-container:focus .highlighted-informations,
@@ -9674,8 +9672,10 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .featured-products .product-title,
 .product-accessories .product-title,
 .product-miniature .product-title {
-    text-align: center;
-    text-transform: capitalize;
+    text-align: left;
+    border-left: 1px solid #000;
+    padding-left: 5px;
+    text-transform: lowercase;
     margin-top: .7rem
 }
 
@@ -9685,7 +9685,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .product-miniature .product-price-and-shipping {
     color: #232323;
     font-weight: 700;
-    text-align: center
+    text-align: left;
 }
 
 #products .product-price-and-shipping .discount-product,
@@ -9720,7 +9720,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     text-align: center;
     width: 250px;
     height: 3.125rem;
-    box-shadow: 0 -5px 10px -5px rgba(0, 0, 0, .2);
     transition: bottom .3s
 }
 
@@ -9811,19 +9810,6 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     font-weight: 700;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem
-}
-
-@media (max-width:767px) {
-    #products .thumbnail-container,
-    .featured-products .thumbnail-container,
-    .product-accessories .thumbnail-container {
-        box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .2)
-    }
-    #products .thumbnail-container .product-description,
-    .featured-products .thumbnail-container .product-description,
-    .product-accessories .thumbnail-container .product-description {
-        box-shadow: 0 -5px 10px -5px rgba(0, 0, 0, .2)
-    }
 }
 
 @media (max-width:991px) {
@@ -11324,10 +11310,8 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 }
 
 .social-sharing li {
-    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, .2);
     height: 2.5rem;
     width: 2.5rem;
-    border-radius: 50%;
     display: inline-block;
     background-color: #fff;
     background-repeat: no-repeat;
@@ -12018,37 +12002,37 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 }
 
 .facebook {
-    background-image: url(../css/3935e107ea61866e60d7946dc6a962f1.svg)
+    background-image: url(../img/fb.svg)
 }
 
 .facebook:before {
     content: "";
-    background-image: url(../css/8b05d51ede908907d65695558974d86f.svg)
+    background-image: url(../img/fb.svg)
 }
 
 .facebook.icon-gray {
-    background-image: url(../css/082a71677e756fb75817e8f262a07cb4.svg)
+    background-image: url(../img/fb.png)
 }
 
 .facebook.icon-gray:hover {
-    background-image: url(../css/8b05d51ede908907d65695558974d86f.svg)
+    background-image: url(../img/fb.png)
 }
 
 .twitter {
-    background-image: url(../css/a67175d1ea11389d9107bd8c08f9d7d7.svg)
+    background-image: url(../img/twitter.svg)
 }
 
 .twitter:before {
     content: "";
-    background-image: url(../css/ffddcb3736980b23405b31142a324b62.svg)
+    background-image: url(../img/twitter.svg)
 }
 
 .twitter.icon-gray {
-    background-image: url(../css/e049aeb07a2ae1627933e8e58d3886d2.svg)
+    background-image: url(../img/twitter.png)
 }
 
 .twitter.icon-gray:hover {
-    background-image: url(../css/ffddcb3736980b23405b31142a324b62.svg)
+    background-image: url(../img/twitter.png)
 }
 
 .rss {
@@ -12081,12 +12065,12 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 }
 
 .pinterest {
-    background-image: url(../css/afb2ed6d67613a724a420a39b4fe5b0d.svg)
+    background-image: url(../img/printerest.svg)
 }
 
 .pinterest:before {
     content: "";
-    background-image: url(../css/b1db819132e64a3e01911a1413c33acf.svg)
+    background-image: url(../img/printerest.svg)
 }
 
 .pinterest.icon-gray {
@@ -12102,7 +12086,7 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 }
 
 .instagram {
-    background-image: url(../css/0266b05265f317a7409560b751cd61e8.svg)
+    background-image: url(../img/insta.png)
 }
 
 .footer-container {
