--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -10,11 +10,10 @@
                 h2 {
                     font-size: 11px;
                     letter-spacing: 1px;
-                    border-bottom: 1px solid $black;
                     padding-bottom: 20px;
                 }
                 .row {
-                    height: 410px;
+                    height: 450px;
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: space-between;
@@ -22,17 +21,35 @@
                     &::after {
                         content: none
                     }
+
+                    > div {
+                        margin: 0;
+                    }
+
+                    @media (max-width: 480px) {
+                        height: 100%;
+
+                        > div {
+                            width: 100%;
+                            margin-bottom: 60px;
+                        }
+                    }
                     .product-miniature {
                         margin: 0;
+                        height: 100%;
+                        @media (max-width:480px) {
+                            height: 440px;
+                        }
                         .thumbnail-container {
                             box-shadow: none;
-                            border: 1px solid $black;
                             width: 320px;
+                            @media (max-width: 480px) {
+                                width: 100%;
+                            }
                             a {
                                 height: 100%;
                                 img {
                                     width: 100%;
-                                    border: 1px solid $black;
                                 }
                             }
                             .product-description {
@@ -48,9 +65,6 @@
                                         font-size: 24px;
                                     }
                                 }
-                                .product-price-and-shipping {
-                                    text-align: left;
-                                }
                             }
                             .highlighted-informations {
                                 box-shadow: none;
@@ -58,6 +72,16 @@
                             }
                         }
                     }
+                }
+            }
+
+            .home-category-foot {
+                .categories-preview {
+                    @media (max-width: 480px) {
+                    
+                        display: block;
+                    }
+
                 }
             }
         }
