--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -32,24 +32,14 @@
     max-width: 100px
 }
 
-#js-product-list,
-.featured-products {
-    .products {
-        > div {
-            margin-bottom: 80px;
+#wrapper {
+    padding-top: 0;
 
-            @media (max-width:480px) {
-                margin-bottom: 60px;
-            }
-
-            article {
-                height: 370px;
-                position: relative;
-
-                .product-price-and-shipping {
-                    position: absolute;
-                    bottom:0;
-                    left:0;
+    .container {
+        .page-home {
+            #custom-text {
+                #custom-text-container {
+                    padding: 40px 20px;
                 }
             }
         }
