--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -117,7 +117,7 @@
                     }
                 }
                 .mobile {
-                    #_id_logo {
+                    #_mobile_logo {
                         text-align: center;
                         a {
                             img { 
