--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -45,6 +45,14 @@
                 }
             }
         }
+        #main {
+            .products {
+                @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+                    justify-content: space-between;
+
+                }
+            }
+        }
     }
 }
 
